L-07-messageSystem: ConcurrentCollections